--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-pandas
-numpy
-scikit-learn
+pandas==1.5.3
+numpy==1.24.2
+scikit-learn==1.2.2
+sklearn==0.0.post1
+streamlit==1.20.0
+pickleshare==0.7.5
 seaborn
 matplotlib
-jupyter
-Flask
+
