--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pandas==1.5.3
 numpy==1.24.2
 scikit-learn==1.2.2
 sklearn==0.0.post1
-streamlit==1.20.0
+streamlit
 pickleshare==0.7.5
 seaborn
 matplotlib
